# Gnome-Monitors

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/display-cli/: Cargo.toml
crates/display-cli/src/: main.rs
crates/display-core/: Cargo.toml
crates/display-core/src/: geometry.rs  identity.rs  layout.rs  layout_ops.rs  lib.rs  mirror.rs  mode.rs  monitor.rs  paths.rs  prefs.rs  profile.rs  snap.rs  state.rs  store.rs  transform.rs  validation.rs
crates/display-revert-helper/: Cargo.toml
crates/display-revert-helper/src/: main.rs
crates/display-revert-helper/tests/: watchdog.rs
crates/display-ui/: Cargo.toml
crates/display-ui/src/: canvas.rs  identify.rs  main.rs  panel.rs  preview.rs  profiles.rs  ui_state.rs
crates/mutter-backend/: Cargo.toml
crates/mutter-backend/src/: backend.rs  error.rs  fixtures.rs  lib.rs  parse.rs  proxy.rs  serialize.rs  shell_labels.rs
crates/mutter-backend/tests/: fake_service.rs
data/desktop/: com.chrisdaggas.MonitorLayout.desktop  gr.hotwebdesign.MonitorLayout.desktop
data/metainfo/: com.chrisdaggas.MonitorLayout.metainfo.xml  gr.hotwebdesign.MonitorLayout.metainfo.xml
docs/: architecture.md  known-limitations.md  mutter-dbus-notes.md  research-and-feasibility.md  safety-and-rollback.md  system-audit.md  testing.md
packaging/: build-rpm.sh  monitor-layout.spec
