[workspace]
resolver = "3"
members = [
    "crates/display-core",
    "crates/mutter-backend",
    "crates/display-cli",
    "crates/display-revert-helper",
    "crates/display-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Christos <info@hotwebdesign.gr>"]
rust-version = "1.92"

[workspace.dependencies]
display-core = { path = "crates/display-core" }
mutter-backend = { path = "crates/mutter-backend" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "5"
zvariant = "5"
futures-util = "0.3"
futures-lite = "2"
clap = { version = "4", features = ["derive"] }
gtk = { package = "gtk4", version = "0.11", features = ["gnome_50"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_9"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
