[package]
name = "display-revert-helper"
description = "Out-of-process rollback watchdog for Monitor Layout"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "monitor-layout-revert-helper"
path = "src/main.rs"

[dependencies]
display-core = { workspace = true }
mutter-backend = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-lite = { workspace = true }

[lints]
workspace = true
